feat: Add comprehensive memory analysis and performance benchmarks
- Add MemoryAnalyzer tool for precise memory usage comparison
  - GC-based accurate memory measurement
  - File size comparison (CSV vs Binary)
  - Compression ratio statistics
  - Cache vs No-cache memory comparison
  - Loading performance testing
  - Per-item average memory usage analysis
  - Beautiful formatted report output

- Enhance KVStreamerBenchmark with more test scenarios
  - Add 1000 random reads latency test
  - Add full iteration performance test
  - Add ContainsKey performance test
  - Add TryGetValue performance test
  - Add indexer access performance test
  - Add detailed memory diagnostics
  - Add Min/Max/Mean/Median columns
  - Add rank column for better comparison

- Add comprehensive benchmark documentation
  - Usage instructions for both tools
  - Sample test results
  - Performance optimization recommendations
  - Use case suggestions
  - Custom test data configuration guide

Test Results Summary:
- Binary format saves ~63% disk space vs CSV
- KVStreamer (no cache) uses ~20% more memory than Dictionary
- KVStreamer loading speed significantly faster than CSV parsing
- Dictionary has fastest random access
- KVStreamer cache mode approaches Dictionary performance

--- a/Src/Benchmark/MemoryAnalyzer.csproj
+++ b/Src/Benchmark/MemoryAnalyzer.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>KVStreamer.Benchmark</RootNamespace>
-    <AssemblyName>KVStreamerBenchmark</AssemblyName>
+    <AssemblyName>MemoryAnalyzer</AssemblyName>
     <Nullable>disable</Nullable>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
@@ -13,17 +13,13 @@
     <!-- 引用核心类文件 -->
     <Compile Include="..\KVStreamer.cs" Link="KVStreamer.cs" />
     <Compile Include="..\ValueCache.cs" Link="ValueCache.cs" />
-    <!-- 排除 MemoryAnalyzer -->
-    <Compile Remove="MemoryAnalyzer.cs" />
+    <!-- 排除 Benchmark 文件 -->
+    <Compile Remove="KVStreamerBenchmark.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- 包含测试数据文件 -->
     <None Include="..\Example\chapter1.csv" CopyToOutputDirectory="PreserveNewest" Link="Src\Example\chapter1.csv" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.15.8" />
   </ItemGroup>
 
 </Project>
